--- a/style.css
+++ b/style.css
@@ -98,6 +98,18 @@
     font-size: 16px;
     color: #555;
 }
+.comp-ttl{
+    font-weight: lighter;
+    color: #524f4f;
+    font-size: 18px;
+    margin-bottom: 5px;
+    text-decoration: line-through;
+}
+.comp-desc{
+    text-decoration: line-through;
+    font-size: 16px;
+    color: #747474;
+}
 
 .crossSymbol {
     cursor: pointer;
